Kubernetes/Hands-On-11 — Networking Internals — No Magic/pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: net-lab
spec:
  nodeName: k8s-labs-worker
  containers:
    - name: pod-a
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
