Kubernetes/Hands-On-11 — Networking Internals — No Magic/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: net-lab
spec:
  selector:
    app: pod-a
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
