Kubernetes/Hands-On-11 — Networking Internals — No Magic/netpol-allow-a-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-a-egress
  namespace: net-lab
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: pod-b
