Kubernetes/Hands-On-11 — Networking Internals — No Magic/netpol-allow-a-to-b.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-a-to-b
  namespace: net-lab
spec:
  podSelector:
    matchLabels:
      app: pod-b
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pod-a
