Kubernetes/Hands-On-11 — Networking Internals — No Magic/netpol-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: net-lab
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
